2007-05-09  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/playlist/playlistparser.py:
	  Fix duration adjustment for making sources fit into timeline.

2007-05-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/misc/httpfile/file.py (File.renderAuthenticated,
	  File.do_prepareBody, MimedFileFactory, FLVFile,
	  FLVFile.do_prepareBody, FileTransfer):
	  Make sure start= requests on FLV files give me the right mime type
	  by not writing before all headers are set.
	  factor out an overridable do_prepareBody in which FLV and the like
	  can do their manipulative trickery.
	  Re-fixes #618.
	* flumotion/test/test_misc_httpfile.py (TestTextFile.finishCallback,
	  TestDirectory.finish, TestDirectory.finish, TestDirectory.finish,
	  TestDirectory.testFLVRangeStart, TestDirectory.finish):
	  Add tests.  Be more assertive.

2007-05-09  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/playlist/playlist.py:
	* flumotion/component/producers/playlist/playlist.xml:
	* flumotion/component/producers/playlist/playlistparser.py:
	  Allow audio-only or video-only compositions to be configured.

2007-05-09  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/playlist/playlistparser.py:
	  Remove unused local to satisfy pychecker.

2007-05-09  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/playlist/playlistparser.py:
	  Use the discoverer on files before adding them.

2007-05-09  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/common/config.py (FlumotionConfigXML.parseFeed,
	  FlumotionConfigXML.addFeed):
	Used table parser to parse subnodes of eater. This guarantees
	that only feed nodes are children of the eater node.

2007-05-09  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/wizard/steps.py (Soundcard.update_inputs):
	Commit forgotten when moving audio checks to audio.py.
